--- a/pg/テプシス/output/キッチンカー/styles/01_【表示制御】キッチンカー画面スタイル.css
+++ b/pg/テプシス/output/キッチンカー/styles/01_【表示制御】キッチンカー画面スタイル.css
@@ -263,6 +263,15 @@
   height: 18px;
   cursor: pointer;
 }
+.kc-kitchen-car .kc-checkbox:disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+/* 使用不可行のスタイル */
+.kc-kitchen-car .kc-table__row--disabled {
+  background-color: #f5f5f5;
+  color: #999;
+}
 /* その他詳細 */
 .kc-kitchen-car .kc-kitchen-car-note {
   margin-top: 20px;
