--- a/pg/テプシス/output/派遣者/styles/01_【表示制御】派遣者画面スタイル.css
+++ b/pg/テプシス/output/派遣者/styles/01_【表示制御】派遣者画面スタイル.css
@@ -308,6 +308,12 @@
 .sdt-dispatch .sdt-button--secondary .sdt-button__text {
   color: #3B3B3B;
 }
+.sdt-dispatch .sdt-button--danger {
+  background-color: #E80000;
+}
+.sdt-dispatch .sdt-button--danger .sdt-button__text {
+  color: #fff;
+}
 @media screen and (max-width: 760px) {
   .sdt-dispatch .sdt-button {
     min-width: 120px;
