--- a/pg/テプシス/output/キッチンカー/styles/01_【表示制御】キッチンカー画面スタイル.css
+++ b/pg/テプシス/output/キッチンカー/styles/01_【表示制御】キッチンカー画面スタイル.css
@@ -315,6 +315,14 @@
 .sdt-kitchen-car .sdt-button:hover {
   opacity: 0.8;
 }
+.sdt-kitchen-car .sdt-button:disabled {
+  background-color: #C4C9D0;
+  cursor: not-allowed;
+  opacity: 0.6;
+}
+.sdt-kitchen-car .sdt-button:disabled .sdt-button__text {
+  color: #fff;
+}
 .sdt-kitchen-car .sdt-button--primary {
   background-color: #2F80ED;
 }
